# gradient-boosting-trees

./: README.md  main.ipynb  pyproject.toml
gradient_boosting_trees/: README.md  gradient_boosting.py  model.py
gradient_boosting_trees/decision_trees/: cart.py
gradient_boosting_trees/objectives/: log_loss.py  squared_error.py
gradient_boosting_trees/regression/: builder.py  cart.py  tree.py
gradient_boosting_trees/regression/cart/: builder.py  split.py
gradient_boosting_trees/regression/node/: builder.py  split.py
gradient_boosting_trees/trees/: __init__.py
tests/unit/: conftest.py
tests/unit/fixtures/: data_points.py
tests/unit/regression/: test_tree.py
tests/unit/regression/cart/: test_builder.py  test_split.py
tests/unit/regression/node/: test_builder.py  test_split.py
tests/unit/trees/: test_node.py
