[tool.poetry]
name = "gradient-boosting-trees"
version = "0.1.0"
description = ""
authors = ["Fernando André Fernandes"]
readme = "README.md"
packages = [{include = "gradient_boosting_trees"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
seaborn = "^0.12.2"
ipykernel = "^6.25.1"
pandas = "^2.0.3"
plotly = "^5.16.1"
nbformat = "^5.9.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
